--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,7 @@
   <p>Welcome to NodeJS Chat App</p>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io();
-
-    socket.on('connect', () => {
-      console.log('Connected to server');
-    });
-    socket.on('disconnect', () => {
-      console.log('Disconnected from server');
-    });
-  </script>
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
